--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.9.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "nuxt": "^4.0.3",
